tests/test-1/yzy3.out
Error type B at Line 1: Missing type of i.
Error type B at Line 3: Missing type of array.
