tests/test-1/yzy3.cmm
int main(i) {
}
int __add__(array[5]) {
}
